--- a/backand/package.json
+++ b/backand/package.json
@@ -4,7 +4,7 @@
   "main": "repositories/db.js",
   "type": "module",
   "scripts": {
-    "start":"node index.js",
+    "start":"node --env-file=.env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
